--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,111 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: #4299e1 ;
+  color: white;
+  font-family: "Poppins",sans-serif;
+  margin: 0;
+}
+
+.root {
+  display: flex;
+  flex-direction: column;
+  
+}
+
+header {
+  background-color: #22254b;
+  display: flex;
+  padding: 1rem;
+  justify-content: flex-end;
+}
+
+.search {
+  font-family: inherit;
+  font-size: 1.2rem;
+  background-color: transparent;
+  border: 2px solid #4299e1;
+  color: #a2b5db ;
+  border-radius: 50px;
+  padding: 0.5rem 1.5rem;
+}
+
+.search:focus {
+  outline: none ;
+}
+
+
+
+.movie-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.movie {
+  background-color: #22254b;
+  margin: 1rem;
+  border-radius: 3px;
+  box-shadow: 3px 3px 5px rgba(0,0,0,0.1);
+  position:relative;
+  overflow: hidden;
+  width: 300px;
+}
+
+.movie img {
+  width: 100%;
+  height: 450px;
+  object-fit: cover;
+}
+
+.movie-info{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem;
+}
+
+.movie-info h3 {
+  margin: 0;
+}
+
+.movie-over {
+  background-color: #a2b5db ;
+  border-top-left-radius: 3px ;
+  border-top-right-radius: 3px ;
+  box-shadow: 0px -3px 5px rgba(0,0,0,0.1);
+  color: #22254b;
+  padding: 1rem;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  overflow: auto;
+  transform: translateY(102%);
+  max-height: 100%;
+  transition: transform 0.3s ease-in-out;
+}
+
+.movie:hover .movie-over{
+  transform: translateY(0%) ;
+}
+
+.tag {
+  background-color: #4299e1;
+  border-radius: 5px;
+  font-weight: bold;
+  padding:  0.5rem;
+}
+
+.tag.green{
+  color: green;
+}
+
+.tag.orange{
+  color: orange;
+}
+
+.tag.red{
+  color: red;
 }
